@@ -66,3 +66,4 @@ For 0.3:
 ----------
 * Izidor Matušov <izidor.matusov@gmail.com>
 * Kees Cook <kees@ubuntu.com>
+* Marko Kevac <marko@kevac.org>
