@@ -1,5 +1,6 @@
 ????-??-?? Getting Things GNOME! ?.?.?
     * Added link to web documentation in Help menu, by Ronan Jouchet
+    * Fixed bug with data consistency #579189, by Marko Kevac
 
 2010-03-01 Getting Things GNOME! 0.2.2
     * Autostart on login, by Luca Invernizzi
